--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "adal-node": "^0.1.18",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "pug": "^2.0.0-alpha3",
     "morgan": "^1.6.1",
+    "pug": "^2.0.0-alpha3",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5",
-    "sqlite3": "^3.1.1"
+    "sqlite3": "^3.1.1",
+    "superagent": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^2.3.0",
